--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1"
   }
 }
