--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,7 +87,7 @@
     "quotes": ["error", "single"],
     // "semi": ["error", "always"],
     "space-before-blocks": ["error", "always"],
-    "space-before-function-paren": ["error", "never"],
+    // "space-before-function-paren": ["error", "never"],
     "space-in-parens": ["error", "never"],
     "space-infix-ops": "error",
     "spaced-comment": ["error", "always", { "exceptions": ["-", "+"] }],
