feat: Add saved page, protect page with auth & test API response

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,7 +95,7 @@
     // ECMAScript 6
     "arrow-body-style": ["error", "as-needed"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
-    "no-confusing-arrow": ["error", { "allowParens": true }],
+    // "no-confusing-arrow": ["error", { "allowParens": true }],
     "no-duplicate-imports": "error",
     "no-var": "error",
     "prefer-const": "error",
