--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,6 @@
     "spaced-comment": ["error", "always", { "exceptions": ["-", "+"] }],
 
     // ECMAScript 6
-    "arrow-body-style": ["error", "as-needed"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
     "no-confusing-arrow": ["error", { "allowParens": true }],
     "no-duplicate-imports": "error",
@@ -107,6 +106,9 @@
       { "extensions": [".jsx", ".tsx"] }
     ],
     "react/jsx-props-no-spreading": "off",
+    "react-prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
 
     // React Hooks
     "react-hooks/rules-of-hooks": "error",
@@ -114,6 +116,9 @@
 
     // Accessibility
     "jsx-a11y/anchor-is-valid": "off", // Next.js specific rule
-    "jsx-a11y/no-autofocus": "warn"
+    "jsx-a11y/no-autofocus": "warn",
+
+    // typescript
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
