Handle API response with Axios (#3)
* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* refactor(home): Add function to check saved destinations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,7 +87,7 @@
     "quotes": ["error", "single"],
     // "semi": ["error", "always"],
     "space-before-blocks": ["error", "always"],
-    "space-before-function-paren": ["error", "never"],
+    // "space-before-function-paren": ["error", "never"],
     "space-in-parens": ["error", "never"],
     "space-infix-ops": "error",
     "spaced-comment": ["error", "always", { "exceptions": ["-", "+"] }],
@@ -95,7 +95,7 @@
     // ECMAScript 6
     "arrow-body-style": ["error", "as-needed"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
-    "no-confusing-arrow": ["error", { "allowParens": true }],
+    // "no-confusing-arrow": ["error", { "allowParens": true }],
     "no-duplicate-imports": "error",
     "no-var": "error",
     "prefer-const": "error",
