--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.2",
     "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,6 +33,8 @@
     "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11",
     "react-hook-form": "^7.52.1",
     "react-phone-number-input": "^3.4.3",
     "tailwind-merge": "^2.3.0",
