[MAIN] merge dev into main branch (#7)
* feat(icons): Add react icons

* chore(landing): Add link route and icon components usage

* feat(icon): Add single file for icon component

* [DEV] feat: Add feature dashboard (#2)

* feat(package): Add embla carousel package

* chore(eslint): Modify rule for variable[no-shadow]

* chore(landing): Modify imagekit variable on landing

* feat(dashboard): Add carousel component

* feat(card): Add card component

* feat(carousel): Add carousel component

* feat(dashboard): Add feature sidebar

* fix(dashboard): Remove unused image

* style(card): Fix background color

* fix: Remove image

---------

Co-authored-by: Kadek Romi Ardana Putra <romiardana21@gmail.com>

* Feat/auth (#6)

* chore(eslint): Modify rule eslint

* refactor(deps): Add next ui for styled component

* chore(husky): Modify pre commit hook change lint:fix to lint

* chore(tailwind config): Modify tailwind config in content prop

* feat(ui): Separate element to components

* chore: Add app write for test purposes

* feat(auth): Add register and login page

* feat(app write): Add config and types

* feat(form): Add validation form using zod validation

* feat(register): Add createUser function to register using appwrite

* refactor(eslint): Remove unused rules that caused annoyed errors

* Add Profile Feature (#5)

* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* refactor(home): Add function to check saved destinations

* Handle API response with Axios (#3)

* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* feat: Add saved page, protect page with auth & test API response

* refactor(home): Add function to check saved destinations

* feat(chatbot): A

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,19 +73,15 @@
     "block-spacing": ["error", "always"],
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "camelcase": ["error", { "properties": "never" }],
-    // "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "comma-style": ["error", "last"],
     "eol-last": ["error", "always"],
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
-    "linebreak-style": ["error", "unix"],
-    // "max-len": ["error", { "code": 100, "ignoreUrls": true }],
     "no-mixed-spaces-and-tabs": "error",
     "no-multiple-empty-lines": ["error", { "max": 1 }],
     "object-curly-spacing": ["error", "always"],
     "quotes": ["error", "single"],
-    // "semi": ["error", "always"],
     "space-before-blocks": ["error", "always"],
     // "space-before-function-paren": ["error", "never"],
     "space-in-parens": ["error", "never"],
@@ -93,7 +89,6 @@
     "spaced-comment": ["error", "always", { "exceptions": ["-", "+"] }],
 
     // ECMAScript 6
-    "arrow-body-style": ["error", "as-needed"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
     // "no-confusing-arrow": ["error", { "allowParens": true }],
     "no-duplicate-imports": "error",
@@ -107,6 +102,9 @@
       { "extensions": [".jsx", ".tsx"] }
     ],
     "react/jsx-props-no-spreading": "off",
+    "react-prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
 
     // React Hooks
     "react-hooks/rules-of-hooks": "error",
@@ -114,6 +112,9 @@
 
     // Accessibility
     "jsx-a11y/anchor-is-valid": "off", // Next.js specific rule
-    "jsx-a11y/no-autofocus": "warn"
+    "jsx-a11y/no-autofocus": "warn",
+
+    // typescript
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
