--- a/package.json
+++ b/package.json
@@ -13,23 +13,33 @@
     "check": "prettier --check \"**/*.{ts,tsx,js,jsx,md,mdx,css,yaml,yml}\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
+    "appwrite": "^14.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "styled-components": "^6.1.11",
+    "react-hook-form": "^7.52.1",
+    "react-phone-number-input": "^3.4.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -45,6 +55,7 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.1"
   }
 }
