--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.2",
+    "@tabler/icons-react": "^3.11.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -45,6 +46,7 @@
     "autoprefixer": "^10.4.19",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "postcss": "^8.4.39",
