--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
