--- a/package.json
+++ b/package.json
@@ -30,12 +30,10 @@
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.52.1",
-    "react-icons": "^5.2.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -53,7 +51,6 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "react-icons": "^5.2.1",
     "tailwindcss": "^3.4.6"
   }
 }
