--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,7 +76,7 @@
     "camelcase": ["error", { "properties": "never" }],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "comma-style": ["error", "last"],
-    "eol-last": ["error", "always"],
+    // "eol-last": ["error", "off"],
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
     "no-mixed-spaces-and-tabs": "error",
