--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended"
+    "plugin:jsx-a11y/recommended"
+    // "plugin:prettier/recommended"
   ],
   "settings": {
     "react": {
