--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.3.8",
     "lucide-react": "^0.400.0",
-    "next": "14.2.4",
+    "next": "^14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -32,7 +32,7 @@
     "react-hook-form": "^7.52.1",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.11",
-    "sweetalert2": "^11.12.3",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
